idf_component_register(
  SRCS
    "main.c"
    "device-info.c"
    "events.c"
    "panel.c"
    "panel-attest.c"
    "panel-connect.c"
    "panel-gifs.c"
    "panel-keyboard.c"
    "panel-game.c"
    "panel-menu.c"
    "panel-space.c"
    "pixels.c"
    "task-ble.c"
    "task-io.c"
    "utils.c"

  INCLUDE_DIRS
    ""
)
